--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -102,8 +102,8 @@
 
     <TextView
         android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -111,6 +111,7 @@
         android:layout_marginRight="2dp"
         android:layout_marginBottom="8dp"
         android:onClick="registerButtonClicked"
+        android:padding="5dp"
         android:text="New user? Register here"
         android:textColor="@color/design_default_color_primary_dark"
         android:textColorHighlight="@color/colorAccent"
