Half attempt at creating Authorization. Unstable.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Enter Username"
+        android:hint="@string/register_username_hint"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Set Password"
+        android:hint="@string/register_set_password_hint"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Re-Enter Password"
+        android:hint="@string/register_reenter_password_hint"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Register your Account"
+        android:text="@string/register_header"
         android:textColor="@color/design_default_color_primary_dark"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/registerUsername"
@@ -97,11 +97,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:onClick="registerAccount"
-        android:text="Confirm"
+        android:text="@string/register_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerPassword2"
         app:layout_constraintVertical_bias="0.129" />
+
 </android.support.constraint.ConstraintLayout>
